--- a/app/views/questions/_judgement.html.erb
+++ b/app/views/questions/_judgement.html.erb
@@ -1,10 +1,8 @@
-<%= simple_form_for [@exam, @question],:url => examination_questions_path(@exam, :type => @question_type), :method => :post, :html => {:class => 'form-horizontal '} do |f| %>
-  <%= f.input :title, label: "题目"%>
+<%= simple_form_for [@exam, @question], :method => :post, :html => {:class => 'form-horizontal '} do |f| %>
+  <%= f.input :title, label: "题干："%>
+  <%= f.input :answer, :collection => [["true", "正确"], ["false", "错误"]], :value_method =>:first, :label_method => :last, :label => "正确答案：" %>
+  <%= f.hidden_field :question_type_str, :value => @question_type %>
   <div class="form-actions">
-    <%= f.label :answer, "正确答案:" %>
-    <%= f.collection_radio_buttons :answer,  [["true", "正确"], ["false", "错误"]], :first, :last%>
-  </div>
-  <div class="form-actions">
-    <%= f.button :submit, '完成', :class => "btn-primary"  %>
+    <%= f.button :submit, '创建新题目', :class => "btn-primary"  %>
   </div>
 <% end %>
