Hook up examination to course class.

--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -181,14 +181,13 @@ ul.course-class-attachment {
 }
 
 .examination-list {
+  border-top: 1px solid #ddd;
   padding: 10px 0;
-  a { float: right; }
 }
 
 .survey-list {
   padding: 10px 0;
   border-top: 1px solid #ddd;
-  a { float: right; }
 }
 
 
