--- a/app/views/examinations/show.html.erb
+++ b/app/views/examinations/show.html.erb
@@ -59,7 +59,8 @@
     <h3 class="subtitle">管理考题</h3>
     <div class="divider15"></div>
     <div class="well">
-      <a href="<%= new_examination_question_path(@exam.id) %>" data-toggle="modal" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> 添加新考题</a>
+      <a href="<%= new_examination_question_path(@exam) %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> 添加新考题</a>
+      <a href="<%= edit_examination_path(@exam) %>" class="btn btn-warning"><i class="iconfa-edit icon-white"></i> 修改考试信息</a>
     </div>
     <% end %>
   </div>
