--- a/app/views/questions/_dialogical.html.erb
+++ b/app/views/questions/_dialogical.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [@exam, @question], :method => :post, :html => {:class => 'form-horizontal '} do |f| %>
+<%= simple_form_for [@exam, @question], :html => {:class => 'form-horizontal '} do |f| %>
   <%= f.input :title, label: "题干：", :input_html => { :class => "xlarge" }%>
   <%= f.input :answer, label: "参考答案：", :as => :text, :input_html => { :class => "xlarge", :rows => 3 } %>
   <%= f.hidden_field :question_type_str, :value => @question_type %>
