--- a/app/views/questions/_judgement.html.erb
+++ b/app/views/questions/_judgement.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [@exam, @question], :method => :post, :html => {:class => 'form-horizontal '} do |f| %>
+<%= simple_form_for [@exam, @question], :html => {:class => 'form-horizontal '} do |f| %>
   <%= f.input :title, label: "题干："%>
   <%= f.input :answer, :collection => [["true", "正确"], ["false", "错误"]], :value_method =>:first, :label_method => :last, :label => "正确答案：" %>
   <%= f.hidden_field :question_type_str, :value => @question_type %>
