--- a/app/views/permissions/edit.html.erb
+++ b/app/views/permissions/edit.html.erb
@@ -13,19 +13,20 @@
 
 <div class="row-fluid">
   <div id="dashboard-left" class="span8">
-    <h3 class="subtitle"><%= t("users.all.editprof") %></h3>
+    <h3 class="subtitle"><%= t("修改默认权限") %></h3>
     <div class="divider15"></div>
-    <h4 class="widgettitle"><%= t("users.all.editprof") %></h4>
+    <h4 class="widgettitle"><%= t("修改默认权限") %></h4>
     <div class="widgetcontent">
       <div class="divider15"></div>
-      <%= simple_form_for(@authority, :html => {:class => 'form-horizontal'}) do |f| %>
-      	<% f.hidden_field :user_id, :value => current_user.id %>
-        <%= f.input :create_permit, :label => '创建权限' %>
-        <%= f.input :read_permit, :label => '可读权限' %>
-        <%= f.input :write_permit, :label => '可写权限' %>
-        <%= f.input :delete_permit, :label => '删除权限' %>
+      <%= simple_form_for(@authority, :url => permission_path, :method => 'put',:html => {:class => 'form-horizontal'}) do |f| %>
+      	<% f.hidden_field :id, :value => @authority.id %>
+        <%= f.input :role,:label => '角色', :disabled => true %>
+        <%= f.input :model_name, :label => '模块', :disabled => true %>
+        <%= f.input :create_permit, collection: @scope_list, :label => '创建权' %>
+        <%= f.input :edit_permit, collection: @scope_list, :label => '修改权' %>
+        <%= f.input :read_permit, collection: @scope_list, :label => '查阅权' %>
         <div class="form-actions">
-        <%= f.button :submit, '修改用户权限', :class => "btn-primary"  %>
+        <%= f.button :submit, '修改默认权限', :class => "btn-primary"  %>
         </div>
       <% end %>
     </div>
