--- a/app/views/permissions/index.html.erb
+++ b/app/views/permissions/index.html.erb
@@ -27,27 +27,25 @@
       <table class="table table-bordered responsive">
         <thead>
           <tr>
-            <th class="center"><%= t('permissions.all.action') %></th>
-            <th class="center"><%= t('users.all.name') %></th>
+            <th class="center"><%= t('users.all.action') %></th>
+            <th class="center"><%= t('permissions.all.role')%></th>
             <th class="center"><%= t('permissions.all.name') %></th>
             <th class="center"><%= t('permissions.all.create')%></th>
             <th class="center"><%= t('permissions.all.read') %></th>
             <th class="center"><%= t('permissions.all.update')%></th>
-            <th class="center"><%= t('permissions.all.delete')%></th>
           </tr>
         </thead>
         <tbody>
         <% @authority.each do |p| %>
           <tr>
             <td class="center">
-              <%= link_to "修改", edit_permission_path(p.id), {:class => "btn btn-primary"} %>
+              <%= link_to "编辑", edit_permission_path(p), {:class => "btn btn-primary"} %>
             </td>
-            <td class="center"><%= (User.find_by_id(p.user_id)).name %></td>
-            <td class="center"><%= p.model_name %></td>
-            <td class="center"><%= p.action_permit('Create') %> 
-            <td class="center"><%= p.action_permit('Read') %>  
-            <td class="center"><%= p.action_permit('Update') %>
-            <td class="center"><%= p.action_permit('Delete') %>       
+            <td class="center"><%= p.get_role_name(p.role) %></td>
+            <td class="center"><%= p.get_model_name(p.model_name) %></td>
+            <td class="center"><%= p.get_permit_scope(p.create_permit) %></td> 
+            <td class="center"><%= p.get_permit_scope(p.read_permit) %></td>  
+            <td class="center"><%= p.get_permit_scope(p.edit_permit) %></td>   
           </tr>
           <% end %>
         </tbody>
@@ -60,8 +58,53 @@
     <h3 class="subtitle">权限管理</h3>
     <div class="divider15"></div>
     <div class="well">
-      <a href="<%= new_permission_path %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i>创建用户权限</a>
+      <a href="<%= new_permission_path %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i>创建默认权限</a>
     </div>
-    <% end %>
-  </div> 
+  </div>
+
+  <div id="dashboard-right" class="span4">
+    <h4 class="widgettitle"> <%= t('查询用户权限')%></h4>
+    <div class="widgetcontent">
+      <%= form_tag permissions_path, :method => 'get' do %>
+      <div>
+        <%= label_tag :user_id, t('用户名') %>
+        <%= collection_select(nil, :user_id, User.all, :id, :name, :prompt => false) %>
+      </div>
+      <%= submit_tag t("permissions.all.search").html_safe, :class => "btn btn-primary" %>
+      <% end %>
+    </div>
+
+    <h3 class="subtitle"><%= t("permissions.all.filter") %></h3>
+    <div class="divider15"></div>
+    <h4 class="widgettitle"> <%= t("permissions.all.filter") %></h4>
+    <div class="widgetcontent">
+      <%= form_tag permissions_path, :method => 'get' do %>
+      <div>
+        <%= label_tag :role, t("角色") %>  
+        <select name="role">
+          <option value=nil select><%= t("请选择")%></option>
+          <option value="Admin"><%= t("permissions.role.admin")%></option><br/>
+          <option value="Manager"><%= t("permissions.role.manager")%></option><br/>
+          <option value="Teacher"><%= t("permissions.role.teacher")%></option><br/>
+          <option value="Staff"><%= t("permissions.role.staff")%></option><br/>
+        </select>
+      </div>    
+      <div>
+        <%= label_tag :model_name, t("模块") %>
+        <select name="model_name">
+          <option value=nil select><%= t("请选择")%></option>
+          <option value="User"><%= t("permissions.model.user")%></option><br/>
+          <option value="Permission"><%= t("permissions.model.permission")%></option><br/>
+          <option value="Ability"><%= t("permissions.model.ability")%></option><br/>
+          <option value="Teacher"><%= t("permissions.model.teacher")%></option><br/>
+          <option value="Course"><%= t("permissions.model.course")%></option><br/>
+          <option value="Plan"><%= t("permissions.model.plan")%></option><br/>
+          <option value="Knowledge"><%= t("permissions.model.knowledge")%></option><br/>
+        </select>
+      </div>
+        <%= submit_tag t("permissions.all.filter").html_safe, :class => "btn btn-primary" %>
+        <%= link_to t("competency.all.clear_filter"),  permissions_path %>
+      <% end %>
+  </div>
+  <% end %>
 </div> <!--row-fluid-->
