--- a/app/views/permissions/new.html.erb
+++ b/app/views/permissions/new.html.erb
@@ -18,10 +18,13 @@
     <div class="widgetcontent">
       <div class="divider15"></div>
         <%= simple_form_for(@authority, :url => permissions_path, :method => :post, :html => {:class => 'form-horizontal'}) do |f| %>
-        <%= f.input :user_id, :label => 'User id' %>
-        <%= f.input :model_name, :label => 'Model Name' %>
+        <%= f.input :role, collection: @role_list, :label => "角色" %>
+        <%= f.input :model_name, collection: @model_list, :label => "模块" %>
+        <%= f.input :create_permit, collection: @scope_list, :label => "创建权" %>
+        <%= f.input :read_permit, collection: @scope_list, :label => "查阅权" %>
+        <%= f.input :edit_permit, collection: @scope_list, :label => "修改权" %>
         <div class="form-actions">
-        <%= f.button :submit, 'Next', :class => "btn-primary"  %>
+        <%= f.button :submit, 'Submit', :class => "btn-primary"  %>
         </div>
         <% end %>
     </div>
