--- a/app/views/permissions/show.html.erb
+++ b/app/views/permissions/show.html.erb
@@ -10,3 +10,47 @@
 <% content_for :javascript do %>
 
 <% end %>
+
+<div class="row-fluid">
+  <div id="dashboard-left" class="span8">
+    <h3 class="subtitle"><%= t('permissions.all.title') %></h3>
+    <div class="divider15"></div>
+    <div class="widgetbox">
+      <div class="headtitle">
+        <h4 class="widgettitle"><span class="iconfa-group"></span> <%= t('permissions.all.title') %></h4>
+      </div>
+      <% if @authority.size == 0 %>
+      <div class="widgetcontent">
+        <p>No Competency Model setup yet. please setup it first. </p>
+      </div>
+      <% else %>
+      <table class="table table-bordered responsive">
+        <thead>
+          <tr>
+            <th class="center"><%= t('users.all.action') %></th>
+            <th class="center"><%= t('users.all.name')%></th>
+            <th class="center"><%= t('permissions.all.name') %></th>
+            <th class="center"><%= t('permissions.all.create')%></th>
+            <th class="center"><%= t('permissions.all.read') %></th>
+            <th class="center"><%= t('permissions.all.update')%></th>
+          </tr>
+        </thead>
+        <tbody>
+        <% @authority.each do |p| %>
+          <tr>
+            <td class="center">
+              <%= link_to "编辑", "#myModal", {:class => "btn btn-primary",  "data-toggle" => "modal"} %>
+            </td>
+            <td class="center"><%= @user.name %></td>
+            <td class="center"><%= p.get_model_name(p.model_name) %></td>
+            <td class="center"><%= p.get_permit_scope(p.create_permit) %></td> 
+            <td class="center"><%= p.get_permit_scope(p.read_permit) %></td>  
+            <td class="center"><%= p.get_permit_scope(p.edit_permit) %></td>   
+          </tr>
+          <% end %>
+        </tbody>
+      </table>     
+      <% end %>
+    </div>
+  </div> 
+</div>
