--- a/app/views/permissions/show.html.erb
+++ b/app/views/permissions/show.html.erb
@@ -21,7 +21,7 @@
       </div>
       <% if @authority.size == 0 %>
       <div class="widgetcontent">
-        <p>No Competency Model setup yet. please setup it first. </p>
+        <p>还没有设置各用户的默认权限，请先创建角色默认权限。 </p>
       </div>
       <% else %>
       <table class="table table-bordered responsive">
