--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <div class="mainwrapper">
   <%= render :partial =>'shared/header' %>
   
-  <div class="leftpanel">
+  <div class="leftpanel affix">
     <%= render :partial => 'shared/leftmenu', :locals => {:category => @menu_category, :active => @menu_active } %>
   </div>
 
