--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header navbar-fixed-top">
   <div class="logo">
     <%= link_to image_tag('logo.png'), current_user.admin? ? admin_dashboard_path : dashboard_user_path(current_user) %>
   </div>
@@ -37,22 +37,42 @@
       </li>
       <% end %>
       <li class="right">
-        <div class="userloggedinfo">
-          <%= image_tag user_avatar_path(current_user, :normal) %>
-          <div class="userinfo">
-            <h5><%= current_user.name %> <small>- <%= current_user.email %></small></h5>
-            <ul>
+<!--        <div class="userloggedinfo">-->                                                                                 
+<!--          <%= image_tag user_avatar_path(current_user, :normal) %> -->
+<!--          <div class="userinfo">-->
+<!--            <h5><%= current_user.name %> <small>- <%= current_user.email %></small></h5> -->
+<!--            <ul> -->
+<!--              <% unless current_user.admin? %> -->
+<!--              <li><a href="<%= edit_user_path(current_user) %>"><%= t("share.header.edit") %></a></li> -->
+<!--              <li><a href=""><%= t("share.header.setting") %></a></li> -->
+<!--              <% else %> -->
+<!--              <li><a href=""><%= t("share.header.edit") %></a></li> -->
+<!--              <li><a href=""><%= t("share.header.setting") %></a></li> -->
+<!--              <% end %> -->
+<!--              <li><%= link_to t("share.header.out"), logout_path %></li> -->
+<!--            </ul> -->
+<!--          </div> -->
+<!--        </div> -->
+        <div class="userloggedinfo btn-group">
+            <a href="#" class="dropdown-toggle btn-large" data-toggle="dropdown">
+            <%= image_tag user_avatar_path(current_user, :normal) %>
+            <!--<i class="iconfa-th"></i--> &nbsp; <%= current_user.name %><!--small> - <%= current_user.email %></small--><span class="caret"></span></a>
+            <ul class="dropdown-menu">
               <% unless current_user.admin? %>
               <li><a href="<%= edit_user_path(current_user) %>"><%= t("share.header.edit") %></a></li>
               <li><a href=""><%= t("share.header.setting") %></a></li>
-              <% else %>
+              <% else %> 
               <li><a href=""><%= t("share.header.edit") %></a></li>
               <li><a href=""><%= t("share.header.setting") %></a></li>
               <% end %>
               <li><%= link_to t("share.header.out"), logout_path %></li>
+              <!-- <li><a href="#"><i class="iconfa-music"></i> &nbsp;Music</a></li>
+               <li><a href="#"><i class="iconfa-star"></i> &nbsp;Favorites</a></li>
+               <li><a href="#"><i class="iconfa-globe"></i> &nbsp;Notification</a></li>
+               <li class="divider"></li>
+               <li><a href="#"><i class="iconfa-arrow-right"></i> &nbsp;Signout</a></li> -->
             </ul>
-          </div>
-        </div>
+         </div>
       </li>
     </ul><!--headmenu-->
   </div>
