--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -65,7 +65,7 @@ a, a:link { color: blue; }
 h4 { font-size: 16px; }
 
 body {
-	background: /*url(<%= asset_data_uri 'leftpanelbg.png' %>)*/url(<%= asset_data_uri 'bg1.png' %>); } repeat-y 0 0; font-size: 12px;
+	background: url(<%= asset_data_uri 'leftpanelbg.png' %>)/*url(<%= asset_data_uri 'bg1.png' %>);*/ } repeat-y 0 0; font-size: 12px;
 	font-family: 'RobotoRegular', 'Helvetica Neue', Helvetica, sans-serif; }
 body.errorpage { background: #fff url(<%= asset_data_uri 'bg1.png' %>);  }
 body.loginpage { background: #0866c6; }
@@ -110,19 +110,20 @@ h1,h2,h3,h4,h5 { font-weight: normal; line-height: normal; }
 .header .logo { width: 200px; text-align: center; padding-top: 10px; padding-bottom: 10px; float: left; border-right: 1px solid rgba(255,255,255,0.15);}
 
 .headmenu { list-style: none; }
-.headmenu .dropdown-menu { border: 2px solid #0866c6; border-top: 0; margin: 0; }
+.headmenu .dropdown-menu { border: 2px solid #0866c6; border-top: 0; margin: 12px 0 0 0; left:auto; right:0;}
 .headmenu .nav-header { text-shadow: none; font-weight: normal; }
 .headmenu .dropdown-menu::after {
-	position: absolute; top: -6px; left: 45px; display: inline-block; border-right: 6px solid transparent;
+	position: absolute; top: -6px; right: 20px; display: inline-block; border-right: 6px solid transparent;
 	border-bottom: 6px solid white; border-left: 6px solid transparent; content: ''; }
 .headmenu > li {
-	display: inline-block; float: left; font-size: 14px; position: relative; border-right: 1px solid rgba(255,255,255,0.15); }
-.headmenu > li:first-child { border-left: 1px solid rgba(255,255,255,0.15); }
+	display: inline-block; float: left; font-size: 14px; margin-left: 20px; position: relative; /*border-right: 1px solid rgba(255,255,255,0.15);*/ }
+/*.headmenu > li:first-child { border-left: 1px solid rgba(255,255,255,0.15); }*/
+.headmenu > li:first-child {margin-right: 10px;}
 .headmenu > li.odd { background: rgba(255,255,255,0.1); }
 .headmenu > li.right { float: right; }
 .headmenu > li > a {
-	min-width: 70px; position: relative; display: block; color: #fff;
-	padding: 0px; cursor: pointer; }
+	min-width: 40px; position: relative; display: block; color: #fff;
+	padding: 0px; cursor: pointer; margin-top:15px;}
 .headmenu > li > a:hover { text-decoration: none; }
 .headmenu > li > a .count { position: absolute; top: 5px; right: 10px; opacity: 0.5; }
 .headmenu > li > a:hover .count, .headmenu > li.open > a .count { opacity: 1; }
@@ -131,16 +132,24 @@ h1,h2,h3,h4,h5 { font-weight: normal; line-height: normal; }
 
 .headmenu > li > a .head-icon { width: 40px; height: 36px; display: block; margin: auto; opacity: 0.5; }
 .headmenu > li > a:hover .head-icon, .headmenu > li.open a .head-icon { opacity: 1; }
-.headmenu > li > a .iconfa-envelope { font-size: 40px; }
-.headmenu > li > a .iconfa-calendar { font-size: 40px; }
-.headmenu > li > a .iconfa-certificate { font-size: 40px; }
-.headmenu > li > a .iconfa-signal { font-size: 40px; }
-.headmenu > li > a .iconfa-tasks { font-size: 40px; }
-.headmenu > li > a .iconfa-group { font-size: 40px; }
-.headmenu > li > a .iconfa-question-sign { font-size: 40px; }
-.headmenu > li > a .iconfa-book { font-size: 40px; }
-.headmenu > li > a .iconfa-briefcase { font-size: 40px; }
-.headmenu > li > a .iconfa-rss { font-size: 40px; }
+.headmenu > li > a .iconfa-envelope { font-size: 30px; }
+.headmenu > li > a .iconfa-calendar { font-size: 30px; }
+.headmenu > li > a .iconfa-certificate { font-size: 30px; }
+.headmenu > li > a .iconfa-signal { font-size: 30px; }
+.headmenu > li > a .iconfa-tasks { font-size: 30px; }
+.headmenu > li > a .iconfa-group { font-size: 30px; }
+.headmenu > li > a .iconfa-question-sign { font-size: 30px; }
+.headmenu > li > a .iconfa-book { font-size: 30px; }
+.headmenu > li > a .iconfa-briefcase { font-size: 30px; }
+.headmenu > li > a .iconfa-rss { font-size: 30px; }
+.headmenu > li > .button .badge, .button .label {
+font-weight: normal;
+padding: 1px 6px;
+font-size: 10px;
+position: absolute;
+top: -4px;
+right: -10px;
+}
 
 
 /*.head-message { background-image: url(<%= asset_data_uri 'message.png' %>); }
