--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -54,9 +54,9 @@
 <!--          </div> -->
 <!--        </div> -->
         <div class="userloggedinfo btn-group">
-            <a href="#" class="dropdown-toggle btn-large" data-toggle="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <%= image_tag user_avatar_path(current_user, :normal) %>
-            <!--<i class="iconfa-th"></i--> &nbsp; <%= current_user.name %><!--small> - <%= current_user.email %></small--><span class="caret"></span></a>
+            <!--<i class="iconfa-th"></i> &nbsp; <%= current_user.name %><small> - <%= current_user.email %></small><span class="caret"></span--></a>
             <ul class="dropdown-menu">
               <% unless current_user.admin? %>
               <li><a href="<%= edit_user_path(current_user) %>"><%= t("share.header.edit") %></a></li>
@@ -73,6 +73,21 @@
                <li><a href="#"><i class="iconfa-arrow-right"></i> &nbsp;Signout</a></li> -->
             </ul>
          </div>
+      </li>
+      <li class="right">
+	<a href="#" class="button">
+	  <i class="iconfa-envelope"></i><span class="badge badge-important">21</span>
+	</a>
+      </li>
+      <li class="right">
+	<a href="#" class="button">
+	  <i class="iconfa-rss"></i><span class="badge badge-important">20</span>
+	</a>
+      </li>
+      <li class="right">
+	<a href="#" class="button">
+	  <i class="iconfa-question-sign"></i><span class="badge badge-important">2</span>
+	</a>
       </li>
     </ul><!--headmenu-->
   </div>
