show different badge style

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -81,12 +81,12 @@
       </li>
       <li class="right">
 	<a href="#" class="button">
-	  <i class="iconfa-rss"></i><span class="badge badge-important">20</span>
+	  <i class="iconfa-rss"></i><span class="badge badge-info">20</span>
 	</a>
       </li>
       <li class="right">
 	<a href="#" class="button">
-	  <i class="iconfa-question-sign"></i><span class="badge badge-important">2</span>
+	  <i class="iconfa-question-sign"></i><span class="badge badge-default">2</span>
 	</a>
       </li>
     </ul><!--headmenu-->
